# MastoMailBlocker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-example.yml  docker-compose.yml  manage.py  mastomailblocker.uwsgi.ini  pyproject.toml  requirements.txt  supervisord.conf  test.py  uwsgi.ini
.crontab/: app-cronjob.sh
.github/: dependabot.yml
.github/workflows/: django.yml
app/: admin.py  apps.py  cron.py  exception.py  mastodon.py  models.py  schedule.py  tasks.py  test_mastodon.py  test_tasks.py  utils.py  views.py
app/fixtures/: db.json
app/management/commands/: generate_schedules.py  import_domains.py  importdomains.py
app/migrations/: 0001_initial.py  0002_client_client_code.py  0003_remove_client_client_code_client_access_token_and_more.py  0004_client_code.py  0005_domain_remove_client_code_remove_client_scope.py  0006_alter_client_client_secret_alter_client_client_url.py  0007_faq_alter_domain_options.py  0008_alter_client_access_token.py  0009_rename_client_id_client_client_key.py  0010_alter_client_options_alter_domain_options_and_more.py
app/signals/: signals.py
app/templates/: disclaimer.html  domain_count.html  faq.html  impressum.html  index.html  latest_instances.html
app/templatetags/: app_extra.py
mastomailblocker/: asgi.py  dev_settings.py  settings.py  urls.py  wsgi.py
templates/: base.html
