[project]
name = "mastomailblocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "croniter==6.0.0",
    "django==4.2.24",
    "django-bootstrap-v5==1.0.11",
    "django-q==1.3.9",
    "docutils==0.22",
    "psycopg[binary]==3.2.10",
    "pyfakefs~=5.9.3",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "setuptools>=80.9.0",
]
