[project]
name = "mastomailblocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "croniter",
    "django",
    "django-bootstrap-v5",
    "django-q",
    "docutils",
    "psycopg[binary]",
    "pyfakefs",
    "requests",
]

[dependency-groups]
dev = [
    "setuptools",
]
