[project]
name = "mastomailblocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "croniter",
    "django>=4.2.28",
    "django-bootstrap-v5",
    "django-q2",
    "docutils",
    "psycopg[binary]",
    "pyfakefs",
    "requests",
    "sqlparse>=0.5.5",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "setuptools",
]
